# Movie-Recommendation-system

./: .gitignore  docker-compose.yml  pyproject.toml  todo
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
core/: db_functions.py  schema_models.py
data/processed/: movies.csv  ratings.csv
scripts/: processed.ipynb  seed_database.py  test_session.py
scripts/seed_data/: test_db_connection.py
